Fixed layout bug

--- a/react-app/src/components/Footer/Footer.css
+++ b/react-app/src/components/Footer/Footer.css
@@ -13,7 +13,7 @@
   position: absolute;
   width: 100%;
   border-top: 1px solid #333;
-  bottom: -100px;
+  bottom: -120px;
 }
 
 .dev-profile {
