--- a/react-app/src/components/TripDetail/TripDetail.css
+++ b/react-app/src/components/TripDetail/TripDetail.css
@@ -14,7 +14,7 @@
   top: 75px;
   position: relative;
   bottom: 100px;
-  height: 796px;
+  height: 100%;
   width: 100%;
   overflow: auto;
 }
